<resources>
    <string name="tracking">Tracking</string>
    <string name="app_name_short" translatable="false">AIMSICD</string>
    <string name="app_name" translatable="false">Android IMSI-Catcher Detector</string>
    <string name="device_info">Phone/SIM Details</string>
    <string name="map_view">Antenna Map Viewer</string>
    <string name="db_viewer">Database Viewer</string>
    <string name="strength">Signal Strength</string>
    <string name="quit">Quit</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_agree">I Agree</string>
    <string name="text_disagree">I Disagree</string>
    <string name="empty" translatable="false"></string>
    <string name="gsm_only">GSM Phones Only</string>
    <string name="disclaimer_title">DISCLAIMER</string>
    <string name="disclaimer">By using AIMSICD you have understood and agree that AIMSICD is an experimental
        and informative Android application that can fail to detect surveillance and
        tracking for many reasons. You also understand that it can be circumvented or
        defeated by other means, not yet understood to the developers. Thus you also
        agree and understand that the developers and companies related to this free
        product, can in no way be held responsible for any results or outcome,
        depending on the use of this application.
    </string>
    <string name="gprs" translatable="false"># GPRS</string>
    <string name="edge" translatable="false"># EDGE</string>
    <string name="umts" translatable="false"># UMTS</string>
    <string name="hsdpa" translatable="false"># HSDPA</string>
    <string name="hsupa" translatable="false"># HSUPA</string>
    <string name="hspa" translatable="false"># HSPA</string>
    <string name="cdma" translatable="false"># CDMA</string>
    <string name="evo0" translatable="false"># EVO-0</string>
    <string name="evoA" translatable="false"># EVO-A</string>
    <string name="toggle_aimsicd_monitoring">Toggle AIMSICD monitoring</string>
    <string name="toggle_2g_only_network_lock">Toggle 2G-only network lock</string>
    <string name="track_femtocell">Track Femtocell</string>
    <string name="untrack_femtocell">Stop Tracking Femtocell</string>
    <string name="show_map">Show Map</string>
    <string name="backup_database">Backup Database</string>
    <string name="clear_database">Clear/Reset Database</string>
    <string name="restore_database">Restore database.</string>
    <string name="preferences">Preferences</string>
    <string name="press_once_again_to_exit">Press again to exit.</string>
    <string name="update_opencelldata">Update OpenCellID Data</string>
    <string name="cell_lookup">All Current Cell Details (ACD)</string>
    <string name="send_logs">Debugging</string>
    <string name="no_network_connection_title">No Internet Connection</string>
    <string name="no_network_connection_message">Unable to download OpenCellID data without Internet
    connectivity, please enable data connection!</string>
    <string name="map_type">Map Display Type</string>
    <string name="get_opencellid">Download Local BTS Data</string>
    <string name="device_info_title">Device Information</string>
    <string name="sim_info_title">SIM Information</string>
    <string name="network_info">Network Information</string>
    <string name="cell_info_title">Current Threat Level</string>
    <string name="neighbouring_cells_title">Neighbouring Cells</string>
    <string name="ciphering_indicator_title">Ciphering Indicator</string>
    <string name="neighbouring_cells_num_title">Total:</string>
    <string name="sim_country">Country:</string>
    <string name="sim_operator_id">Operator ID:</string>
    <string name="sim_operator_name">Operator Name:</string>
    <string name="sim_imsi">IMSI:</string>
    <string name="sim_serial">Serial:</string>
    <string name="device_type">Phone Type:</string>
    <string name="device_imei">IMEI:</string>
    <string name="device_version">RIL Version:</string>
    <string name="device_number">Line Number:</string>
    <string name="network_name">Provider Name:</string>
    <string name="network_code">Provider Code:</string>
    <string name="network_type">Type:</string>
    <string name="network_lac">LAC:</string>
    <string name="network_cellid">CID:</string>
    <string name="data_activity">Data Activity:</string>
    <string name="data_status">Data Status:</string>
    <string name="network_roaming">Roaming:</string>
    <string name="network_lte_timing_advance">TA (LTE):</string>
    <string name="button_refresh">Refresh</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="network_psc">PSC:</string>
    <string name="upload_bts">Upload Local BTS Data</string>
    <string name="about_aimsicd">About AIMSICD</string>
    <string name="app_version">Version:&#160;</string>
    <string name="aimsicd_about_info" translatable="false">Android IMSI-Catcher Detector (AIMSICD)</string>
    <string name="aimsicd_about_info3">Android-based project to detect and avoid fake base stations (IMSI-Catchers) in GSM/UMTS Networks.</string>
    <string name="about_github">AIMSICD on GitHub</string>
    <string name="about_wiki">Documentation (WIKI)</string>
    <string name="about_poc">THIS IS A PoC</string>
    <string name="about_disclaimer">DISCLAIMER</string>
    <string name="about_releases">RELEASES</string>
    <string name="about_changelog">CHANGELOG</string>
    <string name="about_license">LICENSE</string>
    <string name="about_credits">CREDITS</string>
    <string name="poc_link">https://en.wikipedia.org/wiki/Proof_of_concept</string>
    <string name="wiki_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/wiki</string>
    <string name="disclaimer_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/blob/master/DISCLAIMER</string>
    <string name="aimsicd_github_link" translatable="false">https://secupwn.github.io/Android-IMSI-Catcher-Detector/</string>
    <string name="aimsicd_xda_link" translatable="false">http://forum.xda-developers.com/showthread.php?t=1422969</string>
    <string name="aimsicd_release_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/releases</string>
    <string name="aimsicd_changelog_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/blob/master/CHANGELOG.md</string>
    <string name="aimsicd_license_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/blob/master/LICENSE</string>
    <string name="aimsicd_credits_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/blob/master/CREDITS</string>
    <string name="status_icons_link" translatable="false">https://github.com/SecUpwN/Android-IMSI-Catcher-Detector/wiki/Status-Icons</string>
    <string name="network_netid">Network ID:</string>
    <string name="network_sysid">System ID:</string>
    <string name="network_baseid">Base Station ID:</string>
    <string name="network_cdma_long">Longitude:</string>
    <string name="network_cdma_lat">Latitude:</string>
    <string name="location_error_title">Location Services Disabled</string>
    <string name="location_error_message">You cannot track GPS data without enabling Location Services. Enable them now?</string>
    <string name="pref_system_title">System Settings</string>
    <string name="pref_autostart_title">Auto Start</string>
    <string name="pref_autostart_summ">Automatically start service on boot</string>
    <string name="pref_persistservice_title">Persistent Service</string>
    <string name="pref_persistservice_summ">Service will continue to run after exiting the application (uncheck to fully close)</string>
    <string name="pref_protection_title">Protection Settings</string>
    <string name="pref_enable_cell_title">Cell Tracking</string>
    <string name="pref_enable_cell_summ">Enable Automatic Cell Tracking</string>
    <string name="pref_femto_title">Femtocell Detection</string>
    <string name="pref_femto_summ">(currently CDMA Phones ONLY)</string>
    <string name="pref_femto_action_title">Femtocell Protection</string>
    <string name="pref_femto_action_summ">Enforce Airplane Mode when Femtocell detected (re-enable network manually)</string>
    <string name="pref_ui_title">Interface Settings</string>
    <string name="pref_ui_icons_title">Icons</string>
    <string name="pref_ui_icons_summ">Icon Theme Selection</string>
    <string name="action_settings">Settings</string>
    <string name="pref_refresh_title">Refresh Rate</string>
    <string name="pref_refresh_summ">Control the frequency of device updates</string>
    <string name="pref_ocid_title">OpenCellID Settings</string>
    <string name="pref_ocid_key_title">OpenCellID API Key</string>
    <string name="pref_ocid_key_summ">Enter your OpenCellID API Key here</string>
    <string name="pref_enable_cell_monitoring_key" translatable="false">pref_enable_cell_monitoring</string>
    <string name="pref_enable_cell_monitoring_title">Cell Monitoring</string>
    <string name="pref_enable_cell_monitoring_summ">Enable Automatic Cell Monitoring</string>
    <string name="pref_request_ocid_key">Request OCID API Key</string>
    <string name="pref_ocid_requestkey_summary">Request a new API key for OpenCellID data access</string>
    <string name="pref_enable_cell_key" translatable="false">pref_enable_cell_key</string>
    <string name="pref_refresh_key" translatable="false">pref_refresh_key</string>
    <string name="pref_femto_detection_key" translatable="false">pref_femto_detection_key</string>
    <string name="pref_ui_icons_key" translatable="false">pref_ui_icons_key</string>
    <string name="pref_ocid_key" translatable="false">pref_ocid_key</string>
    <string name="pref_autostart_key" translatable="false">pref_autostart</string>
    <string name="disclaimer_accepted" translatable="false">disclaimer_accepted</string>
    <string name="data_last_lat_lon" translatable="false">data_last_lat_lon</string>
    <string name="pref_cell_table_cleansed" translatable="false">pref_cell_table_cleansed</string>
    <string name="pref_last_database_backup_version" translatable="false">pref_last_db_backup_version</string>
    <string name="pref_femto_action_key" translatable="false">pref_femto_action</string>
    <string name="pref_persistservice_key" translatable="false">pref_persistservice_service</string>
    <string name="pref_map_title">Map Viewer Preferences</string>
    <string name="pref_map_type_key" translatable="false">pref_map_type</string>
    <string name="pref_map_type_title">Map Type</string>
    <string name="pref_map_type_summ">Display Map in different styles</string>
    <string name="cell_id_label">CID: </string>
    <string name="lac_label">LAC: </string>
    <string name="mcc_label">MCC: </string>
    <string name="mnc_label">MNC: </string>
    <string name="pc_label">PC: </string>
    <string name="samples_label">Samples: </string>
    <string name="open_cell_id_label">OpenCellID Data</string>
    <string name="lat_label">Lat: </string>
    <string name="lng_label">Lon: </string>
    <string name="response_label">Response:</string>
    <string name="execute_at">Execute</string>
    <string name="serial_device_title">Current Serial Device:</string>
    <string name="serial_device_prompt">Select Serial Device</string>
    <string name="serial_device_spinner_title">Detected Devices:</string>
    <string name="timeout_spinner_title">Timeout:</string>
    <string name="timeout_spinner_prompt">Select Timeout</string>
    <string name="command_hint">Enter AT command here.</string>
    <string name="btn_clear_logs">Clear</string>
    <string name="btn_copy_to_clipboard">Copy</string>
    <string name="btn_stop_logs">Stop</string>
</resources>