<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/atRilDevice"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/serial_device_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_device_title"
            android:textColor="@color/white"
            android:padding="8dip"/>

    <TextView
            android:id="@+id/serial_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/medium_blue"
            android:padding="8dip"
            android:layout_toRightOf="@+id/serial_device_title"
            android:layout_toEndOf="@+id/serial_device_title"/>

    <TextView
            android:id="@+id/serial_device_spinner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_device_spinner_title"
            android:textColor="@color/white"
            android:padding="8dip" android:layout_below="@id/serial_device"
            android:visibility="gone"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serial_device_spinner"
            android:entries="@array/table_names"
            android:prompt="@string/serial_device_prompt"
            android:layout_below="@+id/serial_device"
            android:layout_toRightOf="@id/serial_device_spinner_title"
            android:layout_toEndOf="@id/serial_device_spinner_title"
            android:visibility="gone"/>

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/serial_device_spinner"
                    android:id="@+id/atcommandView"
            android:visibility="gone">

    <TextView
            android:id="@+id/timeout_spinner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout_spinner_title"
            android:textColor="@color/white"
            android:padding="8dip" />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeout_spinner"
            android:entries="@array/timeout_spinner_values"
            android:prompt="@string/timeout_spinner_prompt"
            android:layout_toRightOf="@id/timeout_spinner_title"
            android:layout_toEndOf="@id/timeout_spinner_title"/>

    <EditText
            android:id="@+id/at_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/command_hint"
            android:layout_below="@+id/timeout_spinner_title"
            android:layout_toLeftOf="@+id/execute"
            android:layout_toStartOf="@+id/execute"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_at"
            android:id="@+id/execute" android:layout_alignBottom="@+id/at_command"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_below="@+id/timeout_spinner"/>

    <TextView
            android:id="@+id/response_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_label"
            android:textColor="@color/white"
            android:padding="8dip" android:layout_below="@+id/at_command"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/response_label">
        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:padding="4dip" />
    </ScrollView>
    </RelativeLayout>

    <TextView
            android:id="@+id/at_command_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:padding="8dip" android:layout_below="@+id/serial_device"
            android:visibility="gone"/>
</RelativeLayout>